# ray_tracing_weekend

./: .gitignore  Cargo.toml  Config.toml  README.md  asm1.txt  codebook.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: aabox_hit.rs  sphere_hit.rs
geometry/: Cargo.toml
geometry/src/: aabox.rs  aaplane.rs  bounded.rs  lib.rs  matrix3.rs  onb.rs  transformations.rs  vec3.rs
geometry/src/vec3/: vec.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
scenes/: Cargo.toml
scenes/src/: lib.rs
shared/: Cargo.toml
shared/benches/: aabox_hit.rs  sphere_hit.rs
shared/src/: camera.rs  colour.rs  entities.rs  geometry.rs  hittable.rs  hittable_collections.rs  lib.rs  material.rs  pdf.rs  perlin.rs  ray.rs  scenes.rs  test.rs  texture.rs  utils.rs
shared/src/entities/: aabox.rs  cuboid.rs  plane.rs  quadrilateral.rs  sphere.rs  transformations.rs  triangles.rs
shared/src/geometry/: vec3.rs
shared/src/geometry/vec3/: colour.rs  vec.rs
shared/src/hittable_collections/: bvh.rs  hittable_list.rs
shared/src/hittable_collections/hittable_list/: raw.rs
src/: bvh.rs  camera.rs  config.rs  entities.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  pdf.rs  perlin.rs  ray.rs  scenes.rs  sphere.rs  test.rs  texture.rs  utils.rs  vec3.rs
src/entities/: aabox.rs  plane.rs  quadrilateral.rs  sphere.rs
src/geometry/: matrix3.rs
src/geometry/vec3/: colour.rs  vec.rs
src/hittable_list/: raw.rs
src/vec3/: colour.rs  vec.rs
