[package]
name = "ray_tracing_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
crossbeam = "0.8.2"
image = "0.25.1"
itertools = "0.10.5"
kdam = {version = "0.4.1", features = ["rayon"]}
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "sphere_hit"
harness = false

[[bench]]
name = "aabox_hit"
harness = false
