[workspace]
resolver = '3'
members = [
    "bin",
    "shared",
]

[workspace.lints.clippy]
missing_const_for_fn = "deny"

[workspace.dependencies]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.bench]
debug = true

[profile.release]
debug = true
lto = "fat"

[profile.release.build-override]
opt-level = 3
