cargo-features = ["codegen-backend"]

[workspace]
resolver = '3'
members = [
    "bin", "geometry",
    "shared",
]

[workspace.lints.clippy]
missing_const_for_fn = "deny"
pedantic = { level = "warn", priority = 1}
perf = {level = "warn", priority = 1}
cognitive_complexity = {level = "warn", priority = 1}
empty_line_after_outer_attr = "warn"
needless_borrow = "warn"
wrong_self_convention = "warn"

[workspace.dependencies]

[profile.dev]
opt-level = 0
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.bench]
debug = true

[profile.release]
debug = true
lto = "fat"

[profile.release.build-override]
opt-level = 3
